--- a/public/css/client.css
+++ b/public/css/client.css
@@ -10,6 +10,17 @@
      overflow: hidden;
      position: static;
  }
+ #logo {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 10; /* Ensure it's on top of the map */
+ }
+
+ #logo svg {
+    width: 50px;
+    height: 50px;
+ }
 
  #map {
      height: 100%;
@@ -1229,6 +1240,12 @@
      top: 16px;
      right: 10px;
      z-index: 10;
+ }
+
+ @media (min-width: 769px) {
+  #logo {
+      right: 10px;
+      left: auto;
      background-color: #fff;
      border-radius: 50%;
      width: 40px;
@@ -1295,6 +1312,7 @@
          border-radius: 0;
          box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
          position: fixed;
+         border-radius: 0px;
      }
 
      #list-panel {
@@ -1302,7 +1320,9 @@
          height: 100%;
          transform: translateX(0);
          transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.4s ease;
-         visibility: visible; /* Ensure it's visible on desktop */
+         visibility: visible; /* Ensure it's visible on desktop */     
+         border-top-left-radius: 0px;
+         border-top-right-radius: 0px;
      }
 
      #list-panel.closed {
@@ -1334,6 +1354,7 @@
          /* No dragging on desktop */
          margin-bottom: 0;
          padding: 10px 20px;
+         border-radius: 0px;
      }
 
      #collapse-button {
