playing with landscape mode view style

--- a/public/css/client.css
+++ b/public/css/client.css
@@ -1293,8 +1293,8 @@
      }
 
      #map {
-         width: 75%;
-         margin-left: 25%;
+         /* width: 75%;
+         margin-left: 25%; */
      }
 
      #map.panel-closed {
